--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 					</p>
 				</div>
 		  		<div class="col-md-4 col-lg-12">
-					<p>Le portefeuille présente une sélection de projets récents développés and soutenus par Géoproduits.
+					<p>Le portfolio présente une sélection de projets récents développés and soutenus par Géoproduits.
 					Chaque exemple souligne les analyses, les applications, la cartographie et la conception utilisées pour créer des produits qui répondent à de nombreux besoins, qu’il s’agisse de répondre aux priorités gouvernementales ou de partager des connaissances géographiques avec les Canadiens.
 					</p>
 				</div>
