--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
 <!--Introduction paragraph -->
 			<div class="row">
 		  		<div class="col-md-4 col-lg-12">
-					<p>Géoproduits fait partie de GéoDécouverte Canada et s’appuie sur les principes de GéoDécouverte Canada pour offrir de la valeur aux Canadiens et au Gouvernement du Canada.
+					<p>Géoproduits fait partie de GéoDécouverte et s’appuie sur les principes de GéoDécouverte pour offrir de la valeur aux Canadiens et au Gouvernement du Canada.
 					</p>
 				</div>
 		  		<div class="col-md-4 col-lg-12">
-					<p>Le portfolio présente une sélection de projets récents développés and soutenus par Géoproduits.
+					<p>Le portfolio présente une sélection de projets récents développés et soutenus par GéoProduits.
 					Chaque exemple souligne les analyses, les applications, la cartographie et la conception utilisées pour créer des produits qui répondent à de nombreux besoins, qu’il s’agisse de répondre aux priorités gouvernementales ou de partager des connaissances géographiques avec les Canadiens.
 					</p>
 				</div>
@@ -123,15 +123,15 @@
 				<div class="row">
 					<h4 class="col-md-4 col-lg-12" id="dept">Ressources naturelles Canada &#9679 Le Service géomatique d'urgence</h4>
 				</div>
-				<p id="description">Pendant la 2019 saison d’inondations, le Service géomatique d’urgence de Ressources naturelles Canada s’appuyait sur l’équipe de Géoproduits pour l’aider l’intervention aux inondations dans l’Est du Canada. Des centaines d’imageries satellitaire de Manitoba, de l’Ontario, de Québec, et du Nouveau-Brunswick ont été acquises, traitées, et développées en produits uniques pour soutenir la connaissance de la situation et la planification des interventions. Les résultats étaient un aperçu de la situation presque au temps réelle, et des informations essentielles pour les répondeurs aux urgences pendant la phase d’intervention du cycle de gestion des urgences.</p>
+				<p id="description">Pendant la saison d’inondations 2019, le Service géomatique d’urgence de Ressources naturelles Canada s’appuyait sur l’équipe de GéoProduits pour aider à la réponse aux inondations dans l’est du Canada. Des centaines d’images satellitaires du Manitoba, de l’Ontario, du Québec et du Nouveau-Brunswick ont été acquises, traitées et développées en produits uniques pour soutenir la connaissance de la situation et la planification des interventions. Les résultats étaient un aperçu de la situation en temps quasi réel ainsi que des informations essentielles pour les répondeurs aux urgences pendant la phase d’intervention du cycle de gestion des urgences.</p>
 				<img class = "projimg" src="images/flood_lrg.png" alt="carte d'inondations 2019">
 			</div>
 			<div class="container-fluid">
-				<h3 id="fire">Wildland Fire Awareness Maps</h3>
+				<h3 id="fire">Cartes de sensibilisation aux feux de végétation</h3>
 				<div class="row">
 					<h4 class="col-md-4 col-lg-12" id="">Ressources naturelles Canada &#9679 Le Centre des opérations d'urgence du Ministère</h4>
 				</div>
-				<p id="">Pendant la 2021 saison des feux de végétation, Géoproduits a été commissionner par le Centre des opérations d’urgence du Ministère (COUM) de créer des cartes statiques de sensibilisation aux feux de végétation pour les rapports de situation du sous-ministre et du sous-ministre adjoint (SMA). Les cartes mettent en évidence les feux actifs qui pourraient affecter les immobilisations de Ressources naturelles Canada, l’infrastructure essentielle, et les communautés de Premiers nations. Elles ont été créées pour les provinces demandées par COUM et fournies deux fois par semaine pour un appui continu. </p>
+				<p id="">Pendant la saison des feux de végétation 2021, GéoProduits a été commissionné par le Centre des opérations d’urgence du Ministère (COUM) de créer des cartes statiques de sensibilisation aux feux de végétation pour les rapports de situation du sous-ministre et du sous-ministre adjoint (SMA). Les cartes mettent en évidence les feux actifs qui pourraient affecter les immobilisations de Ressources naturelles Canada, l’infrastructure essentielle et les communautés des Premières Nations. Elles ont été créées pour les provinces demandées par le COUM et fournies deux fois par semaine pour un appui continu. </p>
 				<img class = "projimg" src="images/fires_lrg2.png" alt="Carte de feux de végétation">
 			</div>
 			<div class="container-fluid">
@@ -139,7 +139,7 @@
 				<div class="row">
 					<h4 class="col-md-4 col-lg-12" id="">Ressources naturelles Canada &#9679 Secteur de la politique stratégique et innovation</h4>
 				</div>
-				<p id="">Géoproduits est responsable de la création et de la maintenance des cartes dynamiques qui prennent avantage de la visualisateur de GéoDécouverte sur la Plateforme de science et de données ouvertes pour les effets cumulatifs (PSDO). Cela inclus deux cartes permettant la recherche de données géospatiales dans la catalogue et huit cartes basées sur le thème des effets cumulatifs. GéoConnaissances fournit également des conseils sur la présentation optime des données géospatiales dans des cartes et dans la catalogue PSDO. </p>
+				<p id="">GéoProduits est responsable de la création et de la maintenance des cartes dynamiques qui profitent de l'outil de visualisation de GéoDécouverte sur la Plateforme de science et de données ouvertes pour les effets cumulatifs (PSDO). Cela inclu deux cartes permettant la recherche de données géospatiales dans le catalogue et huit cartes basées sur le thème des effets cumulatifs. GéoProduits fournit également des conseils sur la présentation optimale des données géospatiales sur des cartes ainsi que dans le catalogue de la PSDO. </p>
 				<div class="row">
 					<a href="https://osdp-psdo.canada.ca/dp/fr" target="_blank" class="appurl">Visitez la Plateforme de science et de données ouvertes</a>
 				</div>
