--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 			<div class="container-fluid">
 				<h3 id="lcc">Couvertures des terres du Canada 2015</h3>
 				<div class="row">
-					<h4 class="col-md-4 col-lg-12" id="">Ressources naturelles Canada &#9679 Centre canadien d'observation de la terre</h4>
+					<h4 class="col-md-4 col-lg-12" id="">Ressources naturelles Canada &#9679 Centre canadien de télédétection</h4>
 				</div>
 				<p>En utilisant les données de la couverture de sol de 2015, dérivées initialement d’imageries satellitaire par le Centre canadien d’observation de la terre à une résolution de 30 mètres, l’équipe de Géoproduits a mise à jour trois produits : le traitement des données pour la propre visualisation dans un service web; une application de carte interactive en ligne, et une carte affiche numérique et en papier. Les données ont été présentées dans un façon compréhensive, en expliquant et montrant chaque type de couverture de sol qu’on trouverait sur la carte. </p>
 				<div class="row">
