--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					</ul>
 				</li>
 				<li>
-					<a href="#InformSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle" id="id">Informer les décisions</a>
+					<a href="#InformSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle" id="id">Aide à la décision</a>
 					<ul class="collapse list-unstyled" id="InformSubmenu">
 						<li>
 							<a href="#hot2000">Carte climatique HOT2000</a>
@@ -155,20 +155,20 @@
 				<div class="row">
 					<h4 class="col-md-4 col-lg-12" id="">Ressources naturelles Canada &#9679 Centre canadien de télédétection</h4>
 				</div>
-				<p>En utilisant les données de la couverture de sol de 2015, dérivées initialement d’imageries satellitaire par le Centre canadien d’observation de la terre à une résolution de 30 mètres, l’équipe de Géoproduits a mise à jour trois produits : le traitement des données pour la propre visualisation dans un service web; une application de carte interactive en ligne, et une carte affiche numérique et en papier. Les données ont été présentées dans un façon compréhensive, en expliquant et montrant chaque type de couverture de sol qu’on trouverait sur la carte. </p>
+				<p>En utilisant les données de la couverture terrestre 2015, dérivées initialement d’imagerie satellitaire par le Centre canadien de télédétection à une résolution de 30 mètres, l’équipe de GéoProduits a mise à jour trois produits : le traitement des données pour une visualisation adéquate dans un service cartographique web, une application de carte interactive en ligne et une carte murale en papier ainsi que numérique. Les données ont été présentées d'une façon compréhensible, en expliquant et montrant chaque type de couverture terrestre qu’on trouve sur la carte. </p>
 				<div class="row">
-					<a href = "https://geoscan.nrcan.gc.ca/starweb/geoscan/servlet.starweb?path=geoscan/fullf.web&search1=R=315660" target="_blank" class="appurl">Accédez la carte des couvertures des terres du Canada 2015</a>
+					<a href = "https://geoscan.nrcan.gc.ca/starweb/geoscan/servlet.starweb?path=geoscan/fullf.web&search1=R=315660" target="_blank" class="appurl">Accédez à la carte de la couverture des terres du Canada 2015</a>
 				</div>
-				<img class="projimg" src="images/FR_lcc.PNG" alt= "carte de la couverture de sol 2015">
+				<img class="projimg" src="images/FR_lcc.PNG" alt= "Carte de la couverture des terres 2015">
 			</div>
 			<div class="container-fluid">
 				<h3 id="world">Le monde</h3>
 				<div class="row">
 					<h4 class="col-md-4 col-lg-12" id="">Ressources naturelles Canada &#9679 l'Atlas du Canada</h4>
 				</div>
-				<p>Le monde est une carte politique de référence générale axée sur les noms et bordures internationales des pays souverains et non-souverains. C’est une nouvelle direction cartographique pour l’Atlas du Canada, fournissant une carte mise à jour au but de développée la connaissance géographique et en utilisant des palettes de couleurs et des choix typographiques pour créer un conception cartographique frais, nouveau, et flexible. La projection cartographique Winkel II préserve les continents contigus tandis que créer une symétrie formelle pour l’ensemble de la carte.  </p>
+				<p>La carte du monde est une carte politique de référence générale axée sur les noms et les frontières internationales des pays souverains et non souverains. C’est une nouvelle approche cartographique pour l’Atlas du Canada, fournissant une carte mise à jour ayant pour but l'accroissement de la connaissance géographique et qui utilise des palettes de couleurs et des choix typographiques afin de créer une conception cartographique nouvelle, rafraichissante et flexible. La projection cartographique Winkel II préserve la contiguïté des continents tout en créant une symétrie formelle pour la carte dans son ensemble. </p>
 				<div class="row">
-					<a href = "https://open.canada.ca/data/fr/dataset/8f1749a5-ac67-467a-9c01-752b375127c3" target="_blank" class="appurl">Accédez la carte du monde</a>
+					<a href = "https://open.canada.ca/data/fr/dataset/8f1749a5-ac67-467a-9c01-752b375127c3" target="_blank" class="appurl">Accédez à la carte du monde</a>
 			    </div>
 				<img class="projimg" src="images/FR_lemonde.png" alt= "Le monde">
 			</div>
@@ -177,7 +177,7 @@
 				<div class="row">
 					<h4 class="col-md-4 col-lg-12" id="">Ressources naturelles Canada &#9679 CanmetÉNERGIE</h4>
 				</div>
-				<p>Tirer parti des données ouvertes de tout le gouvernement, Géoproduits a collaboré avec l’équipe des systèmes photovoltaïques de CanmetÉNERGIE de Ressources naturelles Canada pour développer une application de web qui cartographie la potentielle photovoltaïque de 3500 municipalités canadiens. En utilisant des données qui s’étendent une période de 20 ans, l’application analyse et cartographie l’estimation en kilowatt par heure de la potentielle de l’énergie solaire pour générer l’électricité dans des systèmes photovoltaïques connectées par grilles. Les estimations sont par mois et par année, et pour six réseaux différents pour n’importe quel endroit au Canada. </p>
+				<p>En tirant parti des données ouvertes de tout le gouvernement, GéoProduits a collaboré avec l’équipe des systèmes photovoltaïques de CanmetÉNERGIE de Ressources naturelles Canada pour développer une application web qui cartographie le potentiel photovoltaïque de 3 500 municipalités canadiennes. À l'aide de données couvrant une période de 20 ans, l’application analyse et cartographie les estimations en kilowattheure du potentiel de production d'électricité solaire par des systèmes photovoltaïques raccordés au réseau. Les estimations sont faites par mois et par année pour six différentes orientations de panneaux partout au Canada. </p>
 				<div class="row">
 					<a href = "https://arcgis.com/apps/webappviewer/index.html?id=28c5b15ca78048c6ae1b354dec9027dc&locale=fr" target="_blank" class="appurl">Ouvrez l'application web</a>
 				</div>
@@ -190,7 +190,7 @@
 				<div class="row">
 					<h4 class="col-md-4 col-lg-12" id="">Ressources naturelles Canada &#9679 Service canadien des forêts</h4>
 				</div>
-				<p id="">La carte, la base de données, et le tableau de bord de la Situation du bois massif au Canada fournissent le lieu and l’information des projets et installations de fabrication de bois massif achevés, en constructions, ou prévus au Canada. Il a été publié avec le rapport SBMC de 2021 du Service canadien des forêts, qui document les projets et la capacité de production des projets de construction de bois massif, et analyse l’accroissement de construction en bois massif et montre au constructeurs et concepteurs la valeur de construire avec le bois. </p>
+				<p id="">La carte, la base de données et le tableau de bord de la situation du bois massif au Canada fournissent la localisation et l’information des projets et installations de fabrication de bois massif achevés, en constructions, ou prévus au Canada. Ils ont été publiés avec le rapport SBMC de 2021 du Service canadien des forêts, qui document les projets et la capacité de production des projets de construction de bois massif et analyse l’accroissement de construction en bois massif et démontre aux constructeurs et concepteurs la valeur de construire avec le bois. </p>
 				<div class="row">
 					<a href = "https://arcgis.com/apps/dashboards/ce033edeaaa34e26bf58982d88be72eb" target="_blank" class="appurl">Ouvrez l'application web </a>
 				</div>
@@ -202,14 +202,14 @@
 <!-- Content for Informing Decisions theme -->
 		<div class="section_three">
 			<div class="container-fluid">
-				<h1 id="id2">Informer les décisions</h1>
+				<h1 id="id2">Aide à la décision</h1>
 			</div>
 			<div class="container-fluid">
 				<h3 id="hot2000">Carte climatique HOT2000</h3>
 				<div class="row">
 					<h4 class="col-md-4 col-lg-12" id="">Ressources naturelles Canada &#9679 L'Office de l'efficacité énergétique</h4>
 				</div>
-				<p>La Division d’habitation de l’Office de l’efficacité énergétique de Ressources naturelles Canada gère les initiatives d’efficacité énergétique des maisons neuves et existantes. Un aspect clé est la programme d’analyse d’énergie, HOT2000. Géoproduits a livré de fonctionnalité clé et des données géographiques renouvelées au HOT2000 avec le développement d’une application de cartographie en ligne qui fournit des données climatiques précises à tout utilisateurs, y compris les agences de régulation, les constructeurs, et le gouvernement, quand et où ils ont les besoins.</p>
+				<p>La division d’habitation de l’Office de l’efficacité énergétique de Ressources naturelles Canada gère les initiatives d’efficacité énergétique des maisons neuves et existantes. Un aspect clé est le programme d’analyse d’énergie, HOT2000. GéoProduits a fourni des fonctionnalités clés et des données géographiques renouvelées au HOT2000 avec le développement d’une application cartographique en ligne qui fournit des données climatiques précises à tous les utilisateurs, y compris les agences de régulation, les constructeurs et le gouvernement, quand et où ils en ont besoin.</p>
 				<div class="row">
 					<a href = "https://arcgis.com/apps/webappviewer/index.html?id=42ffdbd53472497eb341891475971272&locale=fr" target="_blank" class="appurl">Ouvrez l'application web</a>
 				</div>
@@ -224,9 +224,9 @@
 				<div class="row">
 					<h4 class="col-md-4 col-lg-12" id="">Ressources naturelles Canada &#9679 Bureau de gestion des grands projets</h4>
 				</div>
-				<p>Chaque année, la Division de l’analyse et de données économiques de la Secteur de politique stratégique et d’innovation collabore avec des experts et des partenaires pour mettre à jour l’Inventaire des grands projets. L’inventaire suit les grands projets des secteurs d’énergie, de mine et de forêts qui sont en voie de construction ou qui sont prévus au cours des 10 prochaines années. Une carte nationale et 13 cartes provinciales/territoriales, en anglais et en français, sont créées pour montrer l’emplacement, le type, et la valeur des grands projets.</p>
+				<p>Chaque année, la division de l’analyse et de données économiques du secteur de politique stratégique et d’innovation collabore avec des experts et des partenaires pour mettre à jour l’inventaire des grands projets. L’inventaire suit les grands projets des secteurs d’énergie, des mines et des forêts qui sont en voie de construction ou qui sont prévus au cours des 10 prochaines années. Une carte nationale et 13 cartes provinciales/territoriales, en anglais et en français, ont été créées pour montrer la localisation, le type et la valeur des grands projets.</p>
 				<div class="row">
-					<a href = "https://open.canada.ca/data/fr/dataset/f5f2db55-31e4-42fb-8c73-23e1c44de9b2" target="_blank" class="appurl">Visitez l'Inventaire des grands projets de BGGP sur Cartes ouvertes</a>
+					<a href = "https://open.canada.ca/data/fr/dataset/f5f2db55-31e4-42fb-8c73-23e1c44de9b2" target="_blank" class="appurl">Visitez l'inventaire des grands projets du BGGP sur Cartes ouvertes</a>
 				</div>
 				<img class="projimg" src="images/FR_mpi.png" alt= "La carte d'inventaire des grands projets">
 			</div>
