--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
 <!--Introduction paragraph -->
 			<div class="row">
 		  		<div class="col-md-4 col-lg-12">
-					<p>Géoproduits fait partie de GéoDécouverte et s’appuie sur les principes de GéoDécouverte pour offrir de la valeur aux Canadiens et au Gouvernement du Canada.
+					<p>Géoproduits fait partie de GéoDécouverte et s’appuie sur les principes de GéoDécouverte pour offrir une valeur ajoutée aux Canadiens et au Gouvernement du Canada.
 					</p>
 				</div>
 		  		<div class="col-md-4 col-lg-12">
-					<p>Le portfolio présente une sélection de projets récents développés et soutenus par GéoProduits.
+					<p>Ce portfolio présente une sélection de projets récents développés et soutenus par GéoProduits.
 					Chaque exemple souligne les analyses, les applications, la cartographie et la conception utilisées pour créer des produits qui répondent à de nombreux besoins, qu’il s’agisse de répondre aux priorités gouvernementales ou de partager des connaissances géographiques avec les Canadiens.
 					</p>
 				</div>
@@ -121,25 +121,25 @@
 			<div class="container-fluid">
 				<h3 id="flood">Soutien à la cartographie d'urgence des inondations</h3>
 				<div class="row">
-					<h4 class="col-md-4 col-lg-12" id="dept">Ressources naturelles Canada &#9679 Le Service géomatique d'urgence</h4>
+					<h4 class="col-md-4 col-lg-12" id="dept">Ressources naturelles Canada &#9679 Service géomatique d'urgence</h4>
 				</div>
-				<p id="description">Pendant la saison d’inondations 2019, le Service géomatique d’urgence de Ressources naturelles Canada s’appuyait sur l’équipe de GéoProduits pour aider à la réponse aux inondations dans l’est du Canada. Des centaines d’images satellitaires du Manitoba, de l’Ontario, du Québec et du Nouveau-Brunswick ont été acquises, traitées et développées en produits uniques pour soutenir la connaissance de la situation et la planification des interventions. Les résultats étaient un aperçu de la situation en temps quasi réel ainsi que des informations essentielles pour les répondeurs aux urgences pendant la phase d’intervention du cycle de gestion des urgences.</p>
+				<p id="description">Pendant la saison d’inondations 2019, le Service géomatique d’urgence de Ressources naturelles Canada s’appuyait sur l’équipe de GéoProduits pour aider à la réponse aux inondations dans l’est du Canada. Des centaines d’images satellitaires du Manitoba, de l’Ontario, du Québec et du Nouveau-Brunswick ont été acquises, traitées et développées en produits uniques pour soutenir la connaissance de la situation et la planification des interventions. Les résultats étaient un aperçu de la situation en temps quasi réel ainsi que des informations essentielles pour les répondants aux urgences pendant la phase d’intervention du cycle de gestion des urgences.</p>
 				<img class = "projimg" src="images/flood_lrg.png" alt="carte d'inondations 2019">
 			</div>
 			<div class="container-fluid">
 				<h3 id="fire">Cartes de sensibilisation aux feux de végétation</h3>
 				<div class="row">
-					<h4 class="col-md-4 col-lg-12" id="">Ressources naturelles Canada &#9679 Le Centre des opérations d'urgence du Ministère</h4>
+					<h4 class="col-md-4 col-lg-12" id="">Ressources naturelles Canada &#9679 Centre des opérations d'urgence du Ministère</h4>
 				</div>
-				<p id="">Pendant la saison des feux de végétation 2021, GéoProduits a été commissionné par le Centre des opérations d’urgence du Ministère (COUM) de créer des cartes statiques de sensibilisation aux feux de végétation pour les rapports de situation du sous-ministre et du sous-ministre adjoint (SMA). Les cartes mettent en évidence les feux actifs qui pourraient affecter les immobilisations de Ressources naturelles Canada, l’infrastructure essentielle et les communautés des Premières Nations. Elles ont été créées pour les provinces demandées par le COUM et fournies deux fois par semaine pour un appui continu. </p>
+				<p id="">Pendant la saison des feux de végétation 2021, GéoProduits a été mandaté par le Centre des opérations d’urgence du Ministère (COUM) de créer des cartes statiques de sensibilisation aux feux de végétation pour les rapports d'état de la situation du sous-ministre et du sous-ministre adjoint (SMA). Les cartes mettent en évidence les feux actifs qui pourraient affecter les immobilisations de Ressources naturelles Canada, les infrastructures essentielles et les communautés des Premières Nations. Elles ont été créées pour les provinces demandées par le COUM et fournies deux fois par semaine pour un soutien continu. </p>
 				<img class = "projimg" src="images/fires_lrg2.png" alt="Carte de feux de végétation">
 			</div>
 			<div class="container-fluid">
-				<h3 id="osdp">Cartes personnalisées pour la plateforme de science et de données ouvertes</h3>
+				<h3 id="osdp">Cartes personnalisées pour la Plateforme de science et de données ouvertes</h3>
 				<div class="row">
 					<h4 class="col-md-4 col-lg-12" id="">Ressources naturelles Canada &#9679 Secteur de la politique stratégique et innovation</h4>
 				</div>
-				<p id="">GéoProduits est responsable de la création et de la maintenance des cartes dynamiques qui profitent de l'outil de visualisation de GéoDécouverte sur la Plateforme de science et de données ouvertes pour les effets cumulatifs (PSDO). Cela inclu deux cartes permettant la recherche de données géospatiales dans le catalogue et huit cartes basées sur le thème des effets cumulatifs. GéoProduits fournit également des conseils sur la présentation optimale des données géospatiales sur des cartes ainsi que dans le catalogue de la PSDO. </p>
+				<p id="">GéoProduits est responsable de la création et de la maintenance des cartes dynamiques qui profitent de l'outil de visualisation de GéoDécouverte sur la Plateforme de science et de données ouvertes pour les effets cumulatifs (PSDO). Cela inclu deux cartes permettant la recherche de données géospatiales dans le catalogue et huit cartes basées sur le thème des effets cumulatifs. GéoProduits fournit également des conseils sur la façon dont les données géospatiales peuvent être présentées de manière optimale sur des cartes ainsi que dans le catalogue de la PSDO. </p>
 				<div class="row">
 					<a href="https://osdp-psdo.canada.ca/dp/fr" target="_blank" class="appurl">Visitez la Plateforme de science et de données ouvertes</a>
 				</div>
@@ -164,7 +164,7 @@
 			<div class="container-fluid">
 				<h3 id="world">Le monde</h3>
 				<div class="row">
-					<h4 class="col-md-4 col-lg-12" id="">Ressources naturelles Canada &#9679 l'Atlas du Canada</h4>
+					<h4 class="col-md-4 col-lg-12" id="">Ressources naturelles Canada &#9679 Atlas du Canada</h4>
 				</div>
 				<p>La carte du monde est une carte politique de référence générale axée sur les noms et les frontières internationales des pays souverains et non souverains. C’est une nouvelle approche cartographique pour l’Atlas du Canada, fournissant une carte mise à jour ayant pour but l'accroissement de la connaissance géographique et qui utilise des palettes de couleurs et des choix typographiques afin de créer une conception cartographique nouvelle, rafraichissante et flexible. La projection cartographique Winkel II préserve la contiguïté des continents tout en créant une symétrie formelle pour la carte dans son ensemble. </p>
 				<div class="row">
@@ -207,7 +207,7 @@
 			<div class="container-fluid">
 				<h3 id="hot2000">Carte climatique HOT2000</h3>
 				<div class="row">
-					<h4 class="col-md-4 col-lg-12" id="">Ressources naturelles Canada &#9679 L'Office de l'efficacité énergétique</h4>
+					<h4 class="col-md-4 col-lg-12" id="">Ressources naturelles Canada &#9679 Office de l'efficacité énergétique</h4>
 				</div>
 				<p>La division d’habitation de l’Office de l’efficacité énergétique de Ressources naturelles Canada gère les initiatives d’efficacité énergétique des maisons neuves et existantes. Un aspect clé est le programme d’analyse d’énergie, HOT2000. GéoProduits a fourni des fonctionnalités clés et des données géographiques renouvelées au HOT2000 avec le développement d’une application cartographique en ligne qui fournit des données climatiques précises à tous les utilisateurs, y compris les agences de régulation, les constructeurs et le gouvernement, quand et où ils en ont besoin.</p>
 				<div class="row">
