--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Portfolio de Géoproduits</title>
+    <title>Portfolio de GéoProduits</title>
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <!-- Our Custom CSS -->
@@ -103,7 +103,7 @@
 <!--Introduction paragraph -->
 			<div class="row">
 		  		<div class="col-md-4 col-lg-12">
-					<p>Géoproduits fait partie de GéoDécouverte et s’appuie sur les principes de GéoDécouverte pour offrir une valeur ajoutée aux Canadiens et au Gouvernement du Canada.
+					<p>GéoProduits fait partie de GéoDécouverte et s’appuie sur les principes de GéoDécouverte pour offrir une valeur ajoutée aux Canadiens et au Gouvernement du Canada.
 					</p>
 				</div>
 		  		<div class="col-md-4 col-lg-12">
@@ -159,7 +159,7 @@
 				<div class="row">
 					<a href = "https://geoscan.nrcan.gc.ca/starweb/geoscan/servlet.starweb?path=geoscan/fullf.web&search1=R=315660" target="_blank" class="appurl">Accédez à la carte de la couverture des terres du Canada 2015</a>
 				</div>
-				<img class="projimg" src="images/FR_lcc.PNG" alt= "Carte de la couverture des terres 2015">
+				<img class="projimg" src="images/FR_lcc.png" alt= "Carte de la couverture des terres 2015">
 			</div>
 			<div class="container-fluid">
 				<h3 id="world">Le monde</h3>
