--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<a href="#CreateSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle" id="ck">Création de connaissances</a>
 					<ul class="collapse list-unstyled" id="CreateSubmenu">
 						<li>
-							<a href="#lcc">Couvertures de terres du Canada 2015</a>
+							<a href="#lcc">Couvertures terrestre au Canada 2015</a>
 						</li>
 						<li>
 							<a href="#world">Le monde</a>
@@ -80,7 +80,7 @@
 							<a href="#hot2000">Carte climatique HOT2000</a>
 						</li>
 						<li>
-							<a href="#mpi">Inventaire de grands projets</a>
+							<a href="#mpi">Inventaire des grands projets</a>
 						</li>
 					</ul>
 				</li>
@@ -103,7 +103,7 @@
 <!--Introduction paragraph -->
 			<div class="row">
 		  		<div class="col-md-4 col-lg-12">
-					<p>GéoProduits fait partie de GéoDécouverte et s’appuie sur les principes de GéoDécouverte pour offrir une valeur ajoutée aux Canadiens et au Gouvernement du Canada.
+					<p>GéoProduits fait partie de GéoDécouverte et s’appuie sur les principes de cette dernière pour offrir une valeur ajoutée aux Canadiens et au Gouvernement du Canada.
 					</p>
 				</div>
 		  		<div class="col-md-4 col-lg-12">
@@ -123,7 +123,7 @@
 				<div class="row">
 					<h4 class="col-md-4 col-lg-12" id="dept">Ressources naturelles Canada &#9679 Service géomatique d'urgence</h4>
 				</div>
-				<p id="description">Pendant la saison d’inondations 2019, le Service géomatique d’urgence de Ressources naturelles Canada s’appuyait sur l’équipe de GéoProduits pour aider à la réponse aux inondations dans l’est du Canada. Des centaines d’images satellitaires du Manitoba, de l’Ontario, du Québec et du Nouveau-Brunswick ont été acquises, traitées et développées en produits uniques pour soutenir la connaissance de la situation et la planification des interventions. Les résultats étaient un aperçu de la situation en temps quasi réel ainsi que des informations essentielles pour les répondants aux urgences pendant la phase d’intervention du cycle de gestion des urgences.</p>
+				<p id="description">Au cours de la saison d’inondations 2019, le Service géomatique d’urgence de Ressources naturelles Canada a fait appel à l’équipe de GéoProduits pour aider à la réponse aux inondations dans l’Est du Canada. Des centaines d’images satellitaires du Manitoba, de l’Ontario, du Québec et du Nouveau-Brunswick ont été acquises, traitées et développées en produits uniques pour soutenir la connaissance de la situation et la planification des interventions. Les résultats étaient une vue d'ensemble en temps quasi réel de la situation ainsi que des informations essentielles pour les intervenants d'urgence pendant la phase d’intervention du cycle de gestion des urgences.</p>
 				<img class = "projimg" src="images/flood_lrg.png" alt="carte d'inondations 2019">
 			</div>
 			<div class="container-fluid">
@@ -131,7 +131,7 @@
 				<div class="row">
 					<h4 class="col-md-4 col-lg-12" id="">Ressources naturelles Canada &#9679 Centre des opérations d'urgence du Ministère</h4>
 				</div>
-				<p id="">Pendant la saison des feux de végétation 2021, GéoProduits a été mandaté par le Centre des opérations d’urgence du Ministère (COUM) de créer des cartes statiques de sensibilisation aux feux de végétation pour les rapports d'état de la situation du sous-ministre et du sous-ministre adjoint (SMA). Les cartes mettent en évidence les feux actifs qui pourraient affecter les immobilisations de Ressources naturelles Canada, les infrastructures essentielles et les communautés des Premières Nations. Elles ont été créées pour les provinces demandées par le COUM et fournies deux fois par semaine pour un soutien continu. </p>
+				<p id="">Lors de la saison des feux de végétation 2021, GéoProduits a été mandaté par le Centre des opérations d’urgence du Ministère (COUM) pour créer des cartes statiques de sensibilisation aux feux de végétation pour les rapports d'état de la situation du sous-ministre et du sous-ministre adjoint (SMA). Les cartes mettent en évidence les feux actifs qui pourraient affecter les immobilisations de Ressources naturelles Canada, les infrastructures essentielles et les communautés des Premières Nations. Elles ont été créées pour les territoires provinciaux demandés par le COUM et fournies deux fois par semaine pour un soutien continu. </p>
 				<img class = "projimg" src="images/fires_lrg2.png" alt="Carte de feux de végétation">
 			</div>
 			<div class="container-fluid">
@@ -151,22 +151,22 @@
 				<h1 id="ck1">Création de connaissances</h1>
 			</div>
 			<div class="container-fluid">
-				<h3 id="lcc">Couvertures des terres du Canada 2015</h3>
+				<h3 id="lcc">Couvertures terrestre au Canada 2015</h3>
 				<div class="row">
 					<h4 class="col-md-4 col-lg-12" id="">Ressources naturelles Canada &#9679 Centre canadien de télédétection</h4>
 				</div>
-				<p>En utilisant les données de la couverture terrestre 2015, dérivées initialement d’imagerie satellitaire par le Centre canadien de télédétection à une résolution de 30 mètres, l’équipe de GéoProduits a mise à jour trois produits : le traitement des données pour une visualisation adéquate dans un service cartographique web, une application de carte interactive en ligne et une carte murale en papier ainsi que numérique. Les données ont été présentées d'une façon compréhensible, en expliquant et montrant chaque type de couverture terrestre qu’on trouve sur la carte. </p>
+				<p>En utilisant les données de la couverture terrestre 2015, dérivées initialement d’imagerie satellitaire par le Centre canadien de télédétection à une résolution de 30 mètres, l’équipe de GéoProduits a mise à jour trois produits : le traitement des données pour une visualisation adéquate dans un service cartographique web, une application de carte interactive en ligne et une carte murale imprimée ainsi que numérique. Les données ont été présentées d'une façon compréhensible, en expliquant et montrant chaque type de couverture terrestre qu’on trouve sur la carte. </p>
 				<div class="row">
-					<a href = "https://geoscan.nrcan.gc.ca/starweb/geoscan/servlet.starweb?path=geoscan/fullf.web&search1=R=315660" target="_blank" class="appurl">Accédez à la carte de la couverture des terres du Canada 2015</a>
+					<a href = "https://geoscan.nrcan.gc.ca/starweb/geoscan/servlet.starweb?path=geoscan/fullf.web&search1=R=315660" target="_blank" class="appurl">Accédez à la carte de la couverture terrestre au Canada 2015</a>
 				</div>
-				<img class="projimg" src="images/FR_lcc.png" alt= "Carte de la couverture des terres 2015">
+				<img class="projimg" src="images/FR_lcc.png" alt= "Carte de la couverture terrestre au Canada 2015">
 			</div>
 			<div class="container-fluid">
 				<h3 id="world">Le monde</h3>
 				<div class="row">
 					<h4 class="col-md-4 col-lg-12" id="">Ressources naturelles Canada &#9679 Atlas du Canada</h4>
 				</div>
-				<p>La carte du monde est une carte politique de référence générale axée sur les noms et les frontières internationales des pays souverains et non souverains. C’est une nouvelle approche cartographique pour l’Atlas du Canada, fournissant une carte mise à jour ayant pour but l'accroissement de la connaissance géographique et qui utilise des palettes de couleurs et des choix typographiques afin de créer une conception cartographique nouvelle, rafraichissante et flexible. La projection cartographique Winkel II préserve la contiguïté des continents tout en créant une symétrie formelle pour la carte dans son ensemble. </p>
+				<p>La carte du monde est une carte politique de référence générale axée sur les noms et les frontières internationales des pays souverains et non souverains. Il s'agit d'une nouvelle orientation cartographique pour l'Atlas du Canada, qui fournit ici une carte actualisée pour renforcer les connaissances géographiques et qui utilise des palettes de couleurs et des choix typographiques qui créent un design cartographique rafraîchissant, renouvelé et flexible. La projection cartographique Winkel II préserve la contiguïté des continents tout en créant une symétrie formelle pour la carte dans son ensemble. </p>
 				<div class="row">
 					<a href = "https://open.canada.ca/data/fr/dataset/8f1749a5-ac67-467a-9c01-752b375127c3" target="_blank" class="appurl">Accédez à la carte du monde</a>
 			    </div>
@@ -177,7 +177,7 @@
 				<div class="row">
 					<h4 class="col-md-4 col-lg-12" id="">Ressources naturelles Canada &#9679 CanmetÉNERGIE</h4>
 				</div>
-				<p>En tirant parti des données ouvertes de tout le gouvernement, GéoProduits a collaboré avec l’équipe des systèmes photovoltaïques de CanmetÉNERGIE de Ressources naturelles Canada pour développer une application web qui cartographie le potentiel photovoltaïque de 3 500 municipalités canadiennes. À l'aide de données couvrant une période de 20 ans, l’application analyse et cartographie les estimations en kilowattheure du potentiel de production d'électricité solaire par des systèmes photovoltaïques raccordés au réseau. Les estimations sont faites par mois et par année pour six différentes orientations de panneaux partout au Canada. </p>
+				<p>En tirant parti des données ouvertes du gouvernement, GéoProduits a collaboré avec l’équipe des systèmes photovoltaïques de CanmetÉNERGIE de Ressources naturelles Canada pour développer une application web qui cartographie le potentiel photovoltaïque de 3 500 municipalités canadiennes. À l'aide de données couvrant une période de 20 ans, l’application analyse et cartographie les estimations en kilowattheure du potentiel de production d'électricité solaire par des systèmes photovoltaïques raccordés au réseau. Les estimations sont faites pour chaque mois ainsi que sur une base annuelle, selon six orientations différentes partout au Canada. </p>
 				<div class="row">
 					<a href = "https://arcgis.com/apps/webappviewer/index.html?id=28c5b15ca78048c6ae1b354dec9027dc&locale=fr" target="_blank" class="appurl">Ouvrez l'application web</a>
 				</div>
@@ -190,7 +190,7 @@
 				<div class="row">
 					<h4 class="col-md-4 col-lg-12" id="">Ressources naturelles Canada &#9679 Service canadien des forêts</h4>
 				</div>
-				<p id="">La carte, la base de données et le tableau de bord de la situation du bois massif au Canada fournissent la localisation et l’information des projets et installations de fabrication de bois massif achevés, en constructions, ou prévus au Canada. Ils ont été publiés avec le rapport SBMC de 2021 du Service canadien des forêts, qui document les projets et la capacité de production des projets de construction de bois massif et analyse l’accroissement de construction en bois massif et démontre aux constructeurs et concepteurs la valeur de construire avec le bois. </p>
+				<p id="">La carte, la base de données et le tableau de bord de la situation du bois massif au Canada fournissent la localisation et l’information relatives aux projets et installations de fabrication de bois massif complétés, en constructions et prévus au Canada. Ils ont été publiés avec le rapport SBMC de 2021 du Service canadien des forêts qui documente les projets de construction de bois massif au niveau national, la capacité de production, l'analyse de l’accroissement de la construction de bois massif et démontre aux constructeurs et concepteurs la valeur de construire avec du bois. </p>
 				<div class="row">
 					<a href = "https://arcgis.com/apps/dashboards/ce033edeaaa34e26bf58982d88be72eb" target="_blank" class="appurl">Ouvrez l'application web </a>
 				</div>
@@ -209,7 +209,7 @@
 				<div class="row">
 					<h4 class="col-md-4 col-lg-12" id="">Ressources naturelles Canada &#9679 Office de l'efficacité énergétique</h4>
 				</div>
-				<p>La division d’habitation de l’Office de l’efficacité énergétique de Ressources naturelles Canada gère les initiatives d’efficacité énergétique des maisons neuves et existantes. Un aspect clé est le programme d’analyse d’énergie, HOT2000. GéoProduits a fourni des fonctionnalités clés et des données géographiques renouvelées au HOT2000 avec le développement d’une application cartographique en ligne qui fournit des données climatiques précises à tous les utilisateurs, y compris les agences de régulation, les constructeurs et le gouvernement, quand et où ils en ont besoin.</p>
+				<p>La division d’habitations de l’Office de l’efficacité énergétique de Ressources naturelles Canada gère les initiatives d’efficacité énergétique des maisons neuves et existantes. Un aspect clé est le programme d’analyse d’énergie HOT2000. GéoProduits a fourni des fonctionnalités clés et des données géographiques renouvelées au programme HOT2000 avec le développement d’une application cartographique en ligne qui fournit des données climatiques précises à tous les utilisateurs, y compris les agences de régulation, les constructeurs et le gouvernement, quand et où ils en ont besoin.</p>
 				<div class="row">
 					<a href = "https://arcgis.com/apps/webappviewer/index.html?id=42ffdbd53472497eb341891475971272&locale=fr" target="_blank" class="appurl">Ouvrez l'application web</a>
 				</div>
@@ -224,7 +224,7 @@
 				<div class="row">
 					<h4 class="col-md-4 col-lg-12" id="">Ressources naturelles Canada &#9679 Bureau de gestion des grands projets</h4>
 				</div>
-				<p>Chaque année, la division de l’analyse et de données économiques du secteur de politique stratégique et d’innovation collabore avec des experts et des partenaires pour mettre à jour l’inventaire des grands projets. L’inventaire suit les grands projets des secteurs d’énergie, des mines et des forêts qui sont en voie de construction ou qui sont prévus au cours des 10 prochaines années. Une carte nationale et 13 cartes provinciales/territoriales, en anglais et en français, ont été créées pour montrer la localisation, le type et la valeur des grands projets.</p>
+				<p>Chaque année, la division de l’analyse et des données économiques du Secteur de politique stratégique et d’innovation collabore avec des experts et des partenaires pour mettre à jour l’inventaire des grands projets. L’inventaire suit les grands projets des secteurs d’énergie, des mines et des forêts qui sont en voie de construction ou prévus au cours des 10 prochaines années. Une carte nationale et 13 cartes provinciales/territoriales, en français et en anglais, ont été créées pour montrer la localisation, le type et la valeur des grands projets.</p>
 				<div class="row">
 					<a href = "https://open.canada.ca/data/fr/dataset/f5f2db55-31e4-42fb-8c73-23e1c44de9b2" target="_blank" class="appurl">Visitez l'inventaire des grands projets du BGGP sur Cartes ouvertes</a>
 				</div>
@@ -236,8 +236,8 @@
 			<h3 id="contact">Contactez-nous</h3>
 			<div class="row">
 				<div class="col-md-4 col-lg-12">Ressources naturelles Canada</div>
-				<div class="col-md-4 col-lg-12">GéoDécouverte Canada</div>
-				<div class="col-md-4 col-lg-12">L'équipe Géoproduits</div>
+				<div class="col-md-4 col-lg-12">GéoDécouverte</div>
+				<div class="col-md-4 col-lg-12">L'équipe GéoProduits</div>
 				<a href="emailto:geoproducts-geoproduits@nrcan-rncan.gc.ca" class="appurl"> geoproducts-geoproduits@nrcan-rncan.gc.ca</a>
 			</div>
 		</div>
@@ -247,7 +247,7 @@
 <footer class="text-center text-lg-start text-muted">
 	<!-- Copyright -->
   <div class="text-center p-4" style="background-color: #FFFFFF;">
-    <a class="text-reset fw-bold">© Sa Majesté le Roi du chef du Canada, représentée par le ministre des Ressources naturelles</a>
+    <a class="text-reset fw-bold">© Sa Majesté le Roi du chef du Canada, représenté par le ministre des Ressources naturelles</a>
   </div>
 </footer>
 <script>
