--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 				<div class="col-md-4 col-lg-12">Ressources naturelles Canada</div>
 				<div class="col-md-4 col-lg-12">GéoDécouverte</div>
 				<div class="col-md-4 col-lg-12">L'équipe GéoProduits</div>
-				<a href="emailto:geoproducts-geoproduits@nrcan-rncan.gc.ca" class="appurl"> geoproducts-geoproduits@nrcan-rncan.gc.ca</a>
+				<a href="mailto:geoproducts-geoproduits@nrcan-rncan.gc.ca" class="appurl"> geoproducts-geoproduits@nrcan-rncan.gc.ca</a>
 			</div>
 		</div>
     </div>
