--- a/index.html
+++ b/index.html
@@ -194,6 +194,9 @@
 				<div class="row">
 					<a href = "https://arcgis.com/apps/dashboards/ce033edeaaa34e26bf58982d88be72eb" target="_blank" class="appurl">Ouvrez l'application web </a>
 				</div>
+				<div class="row">
+					<a href = "https://scf.rncan.gc.ca/publications?id=40364&lang=fr_CA" target="_blank" class="appurl">Ouvrir la publication </a>
+				</div>
 				<div>
 					<iframe id="stmcIframe" class="myframe" width="1100" height="700" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://arcgis.com/apps/dashboards/ce033edeaaa34e26bf58982d88be72eb"></iframe>
 				</div>
