--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
 				</div>
 				<p>En tirant parti des données ouvertes du gouvernement, GéoProduits a collaboré avec l’équipe des systèmes photovoltaïques de CanmetÉNERGIE de Ressources naturelles Canada pour développer une application web qui cartographie le potentiel photovoltaïque de 3 500 municipalités canadiennes. À l'aide de données couvrant une période de 20 ans, l’application analyse et cartographie les estimations en kilowattheure du potentiel de production d'électricité solaire par des systèmes photovoltaïques raccordés au réseau. Les estimations sont faites pour chaque mois ainsi que sur une base annuelle, selon six orientations différentes partout au Canada. </p>
 				<div class="row">
-					<a href = "https://arcgis.com/apps/webappviewer/index.html?id=28c5b15ca78048c6ae1b354dec9027dc&locale=fr" target="_blank" class="appurl">Ouvrez l'application web</a>
+					<a href = "https://nrcan-rncan.maps.arcgis.com/apps/webappviewer/index.html?id=3dd05b0bffef4c77a677861db84a3bc2&locale=fr" target="_blank" class="appurl">Ouvrez l'application web</a>
 				</div>
 				<div>
-					<iframe class="myframe" id="ppsrIframe" src="about:blank" data-src="https://arcgis.com/apps/webappviewer/index.html?id=28c5b15ca78048c6ae1b354dec9027dc&locale=fr" width="1100" height="700" scrolling = "no" frameborder="0" marginheight="0" marginwidth="0"></iframe>
+					<iframe class="myframe" id="ppsrIframe" src="about:blank" data-src="https://nrcan-rncan.maps.arcgis.com/apps/webappviewer/index.html?id=3dd05b0bffef4c77a677861db84a3bc2&locale=fr" width="1100" height="700" scrolling = "no" frameborder="0" marginheight="0" marginwidth="0"></iframe>
 				</div>
 			</div>
 			<div class="container-fluid">
@@ -214,10 +214,10 @@
 				</div>
 				<p>La division d’habitations de l’Office de l’efficacité énergétique de Ressources naturelles Canada gère les initiatives d’efficacité énergétique des maisons neuves et existantes. Un aspect clé est le programme d’analyse d’énergie HOT2000. GéoProduits a fourni des fonctionnalités clés et des données géographiques renouvelées au programme HOT2000 avec le développement d’une application cartographique en ligne qui fournit des données climatiques précises à tous les utilisateurs, y compris les agences de régulation, les constructeurs et le gouvernement, quand et où ils en ont besoin.</p>
 				<div class="row">
-					<a href = "https://arcgis.com/apps/webappviewer/index.html?id=42ffdbd53472497eb341891475971272&locale=fr" target="_blank" class="appurl">Ouvrez l'application web</a>
+					<a href = "https://nrcan-rncan.maps.arcgis.com/apps/webappviewer/index.html?id=759bcbafd4814e07a5d98a201f743330&locale=fr" target="_blank" class="appurl">Ouvrez l'application web</a>
 				</div>
 				<div>
-					<iframe class="myframe" id="hot2000Iframe" src="about:blank" data-src="https://arcgis.com/apps/webappviewer/index.html?id=42ffdbd53472497eb341891475971272&locale=fr" width="1100" height="700" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+					<iframe class="myframe" id="hot2000Iframe" src="about:blank" data-src="https://nrcan-rncan.maps.arcgis.com/apps/webappviewer/index.html?id=759bcbafd4814e07a5d98a201f743330&locale=fr" width="1100" height="700" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
 
 				</div>
 			</div>
