--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div id="content">
 		<div id="intro" class="container-fluid">
 			<div class="row">
-				<img id="GIlogo2" src="images/GeoProductsLogo.jpg"  width="30%" height="" alt="GeoProduit logo" >
+				<img id="GIlogo2" src="images/Logo_2024.png"  width="30%" height="" alt="GeoProduit logo" >
 		    </div>
 			
 <!--Introduction paragraph -->
